# vr-kiosk-nexus-99

./: .env  README.md  index.html  migration-complete-schema.sql  package-lock.json  package.json  tailwind.config.ts
docs/: DEFAULT_MACHINE_CREDENTIALS.md
mock-cpp-server/: README.md  server.ts
mock-cpp-server/cpp/: CMakeLists.txt  README.md
mock-cpp-server/cpp/config/: games.json
mock-cpp-server/cpp/include/: CommandCenter.hpp
mock-cpp-server/cpp/include/core/: CommandDispatcher.hpp
mock-cpp-server/cpp/include/game/: GameConfig.hpp  GameManager.hpp  GameProcess.hpp
mock-cpp-server/cpp/include/session/: SessionManager.hpp
mock-cpp-server/cpp/include/system/: SystemMonitor.hpp
mock-cpp-server/cpp/include/utils/: Json.hpp  Logger.hpp
mock-cpp-server/cpp/include/websocket/: WebSocketServer.hpp  WebSocketSession.hpp
mock-cpp-server/cpp/src/: CommandCenter.cpp  main.cpp
python_server/: .env.example  README.md  admin_utility.py  command_handler.py  database.py  game_manager.py  games.json  install.bat  install.sh  requirements.txt  rfid_handler.py  server.py  session_manager.py  supabase_sync.py  system_monitor.py  vr-server.service
src/: App.css  App.tsx  index.css  main.tsx
src/components/: CommandCenterStatus.tsx  GameDetail.tsx  RFIDScanScreen.tsx
src/contexts/: AuthContext.tsx  RefreshContext.tsx
src/hooks/: use-toast.ts  useAdminPassword.ts  useAdminSignup.ts  useAuth.tsx  useBusinessAnalytics.ts  useCSVExport.ts  useCommandCenter.tsx  useComprehensiveAnalytics.ts  useCustomerGames.ts  useEarnings.ts  useGames.ts  (+29 more)
supabase/: config.toml
(+144 files in other folders)
